# google-trace-cct-parse

./: Cargo.toml  README.md  run-bench.sh  visualize.py
baseline/: Cargo.toml
baseline/src/: application.rs  lib.rs  trace.rs  utils.rs
baseline/src/cct/: mod.rs  verify.rs  visualize.rs
experiment/: Cargo.toml
experiment/src/: main.rs
parallel-cct/: Cargo.toml
parallel-cct/src/: application.rs  lib.rs  read.rs
parallel-parse/: Cargo.toml
parallel-parse/src/: lib.rs  read.rs
parallel-read/: Cargo.toml
parallel-read/src/: lib.rs  read.rs  trace.rs
src/: cct.rs  lib.rs  main.rs  trace.rs  utils.rs
src/cct/: mod.rs  visualize.rs
utils/src/: lib.rs
