[package]
name = "experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
baseline = { path = "../baseline" }
parallel-read = { path = "../parallel-read" }
parallel-parse = { path = "../parallel-parse" }
parallel-cct = { path = "../parallel-cct" }
env_logger = "0.11.5"
log = "0.4.22"
serde_json = "1.0.128"
